--- a/assets/main.scss
+++ b/assets/main.scss
@@ -119,9 +119,9 @@ html {
   }
 }
 .posts {
-  margin-left: 4rem;
+  margin-left: 1rem;
   .card {
-    margin-left: 2rem;
+    margin-left: 1rem;
   }
   @include until($tablet) {
     .columns{
@@ -311,7 +311,35 @@ html {
   border-top-right-radius: 5px;
   overflow: hidden;
   .card-image {
+    cursor: pointer;
+    position: relative;
+    &:hover{
+      img{
+        opacity: 1;
+      }
+      .social{
+        opacity: 1;
+        top: 0px;
+      }
+    }
+    .social{
+      @include animate(all, 500ms, ease);
+      top: -33px;
+      opacity: 0;
+      text-align: right;
+      position: absolute;
+      padding: 5px 10px 3px;
+      width: 100%;
+      background-color: rgba(28, 28, 28, 0.8);
+      svg{
+        margin-left: 7px;
+        &:hover{
+          color: $green;
+        }
+      }
+    }
     img {
+      opacity: 0.7;
       @include from($desktop) {
         height: 10rem;
       }
